Wording and size of titles in statistics

--- a/templates/table_statistics_teacher.mustache
+++ b/templates/table_statistics_teacher.mustache
@@ -70,7 +70,7 @@
         </div>
         <div class="card">
             <div class="card-body bg-info text-white">
-                <h1 class="card-title">{{#str}} stat_easiest_question, mod_mooduell {{/str}}</h1>
+                <h1 class="card-title" style="font-size: 2em;">{{#str}} stat_easiest_question, mod_mooduell {{/str}}</h1>
                 {{#eq_id}}
                     <p class="card-text text-white" style="font-size: 20px;">{{eq_name}}</p>
                     <p class="card-text"><small>
@@ -88,7 +88,7 @@
         </div>
         <div class="card">
             <div class="card-body bg-danger text-white">
-                <h1 class="card-title">{{#str}} stat_hardest_question, mod_mooduell {{/str}}</h1>
+                <h1 class="card-title" style="font-size: 2em;">{{#str}} stat_hardest_question, mod_mooduell {{/str}}</h1>
                 {{#hq_id}}
                     <p class="card-text text-white" style="font-size: 20px;">{{hq_name}}</p>
                     <p class="card-text"><small>
