--- a/templates/table_statistics_teacher.mustache
+++ b/templates/table_statistics_teacher.mustache
@@ -26,56 +26,80 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+<style>
+        div.card-deck {
+            margin-top: 25px;
+            text-align: center;
+        }
+        div.wbblue {
+            background-color: #263683;
+        }
+        div.wborange {
+                    background-color: #ed8701;
+                }
+        h1 {
+            font-size: 3.5vw;
+        }
+
+        h1.smallheader {
+                    font-size: 2.5vw;
+                }
+
+        .card-body .card-text.subheader {
+            font-size: 1.7vw;
+        }
+    </style>
+
     <!-- Card Deck -->
-    <div class="card-deck" style="margin-top: 25px; text-align: center;">
+    <div class="card-deck">
         <div class="card">
-            <div class="card-body text-white" style="background-color: #263683;">
-                <h1 class="card-title" style="font-size: 80px;"> {{number_of_active_users}} </h1>
-                <p class="card-text" style="font-size: 30px;">{{#str}} stat_active_users, mod_mooduell {{/str}}</p>
-                <p class="card-text"><small>{{#str}} stat_active_users_desc, mod_mooduell {{/str}}</small></p>
+            <div class="card-body wbblue text-white">
+                <h1 class="card-title"> {{number_of_active_users}} </h1>
+                <p class="card-text subheader">{{#str}} stat_active_users, mod_mooduell {{/str}}</p>
+                <p class="card-text">{{#str}} stat_active_users_desc, mod_mooduell {{/str}}</p>
             </div>
         </div>
         <div class="card">
-            <div class="card-body text-white" style="background-color: #ed8701;">
-                <h1 class="card-title" style="font-size: 80px;"> {{number_of_games_started}} </h1>
-                <p class="card-text" style="font-size: 30px;">{{#str}} stat_games_started, mod_mooduell {{/str}}</p>
-                <p class="card-text"><small>{{#str}} stat_games_started_desc, mod_mooduell {{/str}}</small></p>
+            <div class="card-body wborange text-white">
+                <h1 class="card-title" > {{number_of_games_started}} </h1>
+                <p class="card-text subheader">{{#str}} stat_games_started, mod_mooduell {{/str}}</p>
+                <p class="card-text">{{#str}} stat_games_started_desc, mod_mooduell {{/str}}</p>
             </div>
         </div>
         <div class="card">
             <div class="card-body bg-primary text-white">
-                <h1 class="card-title" style="font-size: 80px;"> {{number_of_games_finished}} </h1>
-                <p class="card-text" style="font-size: 30px;">{{#str}} stat_games_finished, mod_mooduell {{/str}}</p>
-                <p class="card-text"><small>{{#str}} stat_games_finished_desc, mod_mooduell {{/str}}</small></p>
+                <h1 class="card-title" > {{number_of_games_finished}} </h1>
+                <p class="card-text subheader">{{#str}} stat_games_finished, mod_mooduell {{/str}}</p>
+                <p class="card-text">{{#str}} stat_games_finished_desc, mod_mooduell {{/str}}</p>
             </div>
         </div>
         <div class="card">
             <div class="card-body bg-warning text-black">
-                <h1 class="card-title" style="font-size: 80px;"> {{number_of_answers}} </h1>
-                <p class="card-text" style="font-size: 30px;">{{#str}} stat_questions_answered, mod_mooduell {{/str}}</p>
-                <p class="card-text"><small>{{#str}} stat_questions_answered_desc, mod_mooduell {{/str}}</small></p>
+                <h1 class="card-title" > {{number_of_answers}} </h1>
+                <p class="card-text subheader">{{#str}} stat_questions_answered, mod_mooduell {{/str}}</p>
+                <p class="card-text">{{#str}} stat_questions_answered_desc, mod_mooduell {{/str}}</p>
             </div>
         </div>
     </div>
-    <div class="card-deck" style="margin-top: 25px; margin-bottom: 25px; text-align: center;">
+    <div class="card-deck">
         <div class="card bg-success text-white">
             <div class="card-body">
-                <h1 class="card-title" style="font-size: 85px;">
+                <h1 class="card-title">
                     {{#percentage_of_correct_answers}}{{.}}%{{/percentage_of_correct_answers}}
                     {{^percentage_of_correct_answers}}0%{{/percentage_of_correct_answers}}
                 </h1>
-                <p class="card-text" style="font-size: 30px;">{{#str}} stat_answered_correctly, mod_mooduell {{/str}}</p>
-                <p class="card-text"><small>{{#str}} stat_answered_correctly_desc, mod_mooduell {{/str}}</small></p>
+                <p class="card-text subheader">{{#str}} stat_answered_correctly, mod_mooduell {{/str}}</p>
+                <p class="card-text">{{#str}} stat_answered_correctly_desc, mod_mooduell {{/str}}</p>
             </div>
         </div>
         <div class="card">
             <div class="card-body bg-info text-white">
-                <h1 class="card-title" style="font-size: 2em;">{{#str}} stat_easiest_question, mod_mooduell {{/str}}</h1>
+                <h1 class="card-title smallheader" >{{#str}} stat_easiest_question, mod_mooduell {{/str}}</h1>
                 {{#eq_id}}
-                    <p class="card-text text-white" style="font-size: 20px;">{{eq_name}}</p>
-                    <p class="card-text"><small>
+                    <p class="card-text subheader text-white" >{{eq_name}}</p>
+                    <p class="card-text">
                         {{#str}} stat_easiest_question_desc1, mod_mooduell {{/str}}{{eq_correct_count}}{{#str}} stat_easiest_question_desc2, mod_mooduell {{/str}}
-                    </small></p>
+                    </p>
                     <a href="../../question/question.php?returnurl=/question/edit.php?courseid={{courseid}}&courseid={{courseid}}&id={{eq_id}}"
                     target="_blank" class="btn btn-primary bg-light text-info" style="border-style: none;">
                     {{#str}} stat_edit_question, mod_mooduell {{/str}}
@@ -88,12 +112,12 @@
         </div>
         <div class="card">
             <div class="card-body bg-danger text-white">
-                <h1 class="card-title" style="font-size: 2em;">{{#str}} stat_hardest_question, mod_mooduell {{/str}}</h1>
+                <h1 class="card-title smallheader">{{#str}} stat_hardest_question, mod_mooduell {{/str}}</h1>
                 {{#hq_id}}
-                    <p class="card-text text-white" style="font-size: 20px;">{{hq_name}}</p>
-                    <p class="card-text"><small>
+                    <p class="card-text subheader text-white" >{{hq_name}}</p>
+                    <p class="card-text">
                         {{#str}} stat_hardest_question_desc1, mod_mooduell {{/str}}{{hq_incorrect_count}}{{#str}} stat_hardest_question_desc2, mod_mooduell {{/str}}
-                    </small></p>
+                    </p>
                     <a href="../../question/question.php?returnurl=/question/edit.php?courseid={{courseid}}&courseid={{courseid}}&id={{hq_id}}"
                         target="_blank" class="btn btn-primary bg-light text-danger" style="border-style: none;">
                     {{#str}} stat_edit_question, mod_mooduell {{/str}}
