--- a/templates/table_highscores.mustache
+++ b/templates/table_highscores.mustache
@@ -24,37 +24,4 @@
 
     }}
 
-<table class="generaltable fullwidth fieldslist">
-    <thead>
-    <tr>
-        <th class="text-right" scope="col">{{#str}} rank, mod_mooduell {{/str}}</th>
-        <th class="text-left"  scope="col">{{#str}} username, mod_mooduell {{/str}}</th>
-        <th class="text-right" scope="col">{{#str}} gamesplayed, mod_mooduell {{/str}}</th>
-        <th class="text-right" scope="col">{{#str}} gameswon, mod_mooduell {{/str}}</th>
-        <th class="text-right" scope="col">{{#str}} gameslost, mod_mooduell {{/str}}</th>
-        <th class="text-right" scope="col">{{#str}} score, mod_mooduell {{/str}}</th>
-        <th class="text-right" scope="col">{{#str}} correctlyanswered, mod_mooduell {{/str}}</th>
-        <th class="text-right" scope="col">{{#str}} correctlyansweredpercentage, mod_mooduell {{/str}}</th>
-    </tr>
-    </thead>
-
-    <!-- this table body will be dynamically filled by an AJAX function in init.js -->
-    <tbody id="highscorestable"/>
-
-    <!-- template without AJAX: -->
-    <!--<tbody>
-    {{! #highscores}}
-        <tr class="field">
-            <td class="text-right">{{! rank}}</td>
-            <td class="text-left" >{{! username}}</td>
-            <td class="text-right">{{! gamesplayed}}</td>
-            <td class="text-right">{{! gameswon}}</td>
-            <td class="text-right">{{! gameslost}}</td>
-            <td class="text-right">{{! score}}</td>
-            <td class="text-right">{{! correct}}</td>
-            <td class="text-right">{{! correctpercentage}} %</td>
-        </tr>
-    {{! /highscores}}
-    </tbody>-->
-</table>
-<div id="hsdownloadbutton"></div>
+<div id="highscorestable"></div>
