--- a/templates/viewpage.mustache
+++ b/templates/viewpage.mustache
@@ -19,37 +19,45 @@
     Data attributes required for JS:
     * none
     Context variables required for this template:
-    * headings - array: An array of table headings.
-    * rows - array: An array of content rows for the table.
+    * statistics - array: An array with values.
+    * opengames - array: empty array, will be filled with JS.
+    * finsihedgames - array: empty array, will be filled with JS.
+    * highscores - array: empty array, will be filled with JS.
 
-    }}
+    Example context (json):
+    {
+       "opengames": [],
+       "finishedgames": [],
+       "warnings": [],
+       "quizname": "test",
+       "mooduellid": "409",
+       "questions": [],
+       "highscores": [],
+       "categories": [
+          {
+             "catid": "7",
+             "contextid": "1",
+             "catname": "MooDuell Präsentation",
+             "courseid": "50"
+          }
+       ],
+       "statistics": {
+          "courseid": "50",
+          "number_of_active_users": "3",
+          "number_of_games_started": "2",
+          "number_of_games_finished": "0",
+          "number_of_answers": "4",
+          "percentage_of_correct_answers": false,
+          "eq_id": false,
+          "eq_name": "",
+          "eq_correct_count": 0,
+          "hq_id": "5",
+          "hq_name": "Wählen Sie alle FALSCHEN ANTWORTEN aus",
+          "hq_incorrect_count": "1"
+       }
+    }
 
-{{!
-    This file is part of Moodle - http://moodle.org/
-    Moodle is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
-    Moodle is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
-    You should have received a copy of the GNU General Public License
-    along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 }}
-{{!
-    @template mod_mooduell/viewpage
-    Template which defines a mooduell view page.
-    Classes required for JS:
-    * none
-    Data attributes required for JS:
-    * none
-    Context variables required for this template:
-    * headings - array: An array of table headings.
-    * rows - array: An array of content rows for the table.
-
-    }}
-
 <h2>{{quizname}}</h2>
 
 <ul>
@@ -88,16 +96,16 @@
         {{> mooduell/table_statistics_teacher }}
     </div>
     <div class="tab-pane fade" id="opengames" role="tabpanel" aria-labelledby="opengames-tab">
-        {{> mooduell/table_open_games_teacher }}
+        <div id="opengamestable"></div>
     </div>
     <div class="tab-pane fade" id="finishedgames" role="tabpanel" aria-labelledby="finishedgames-tab">
-        {{> mooduell/table_finished_games_teacher }}
+        <div id="finishedgamestable"></div>
     </div>
     <div class="tab-pane fade" id="questions" role="tabpanel" aria-labelledby="questions-tab">
         {{> mooduell/table_questions_teacher }}
     </div>
     <div class="tab-pane fade" id="highscores" role="tabpanel" aria-labelledby="highscores-tab">
-        {{> mooduell/table_highscores }}
+        <div id="highscorestable"></div>
     </div>
 </div>
 
