--- a/templates/table_questions_teacher.mustache
+++ b/templates/table_questions_teacher.mustache
@@ -21,7 +21,7 @@
     Context variables required for this template:
     Example context (json):
     {
-        'categories' : [
+        "categories" : [
             [
                {
                   "catid":"7",
@@ -32,8 +32,7 @@
             ]
         ]
     }
-
-    }}
+}}
 
 <ul>
 {{#categories}}
