--- a/templates/viewpage.mustache
+++ b/templates/viewpage.mustache
@@ -21,7 +21,7 @@
     Context variables required for this template:
     * statistics - array: An array with values.
     * opengames - array: empty array, will be filled with JS.
-    * finsihedgames - array: empty array, will be filled with JS.
+    * finishedgames - array: empty array, will be filled with JS.
     * highscores - array: empty array, will be filled with JS.
 
     Example context (json):
