--- a/templates/viewpagestudents.mustache
+++ b/templates/viewpagestudents.mustache
@@ -71,8 +71,8 @@
         </tr>
     </table></div>
     <div class="col-sm">
-        <h4>{{#str}} qr_title, mod_mooduell {{/str}}</h4>
-        <p>{{#str}} qr_desc, mod_mooduell {{/str}}</p>
+        <h4>{{#str}} qrtitle, mod_mooduell {{/str}}</h4>
+        <p>{{#str}} qrdesc, mod_mooduell {{/str}}</p>
     </div>
     {{#qrimage}}
     <div class="col-sm">
