--- a/templates/viewpagestudents.mustache
+++ b/templates/viewpagestudents.mustache
@@ -49,37 +49,28 @@
 {{#str}} downloaduniviemoduell, mod_mooduell {{/str}}
     <br>
     <br>
-    <div class="container">
-  <div class="row">
-    <div class="col-sm"><table class="fullwidth">
-        <tr>
-            <td>
-                {{#str}} univiemooduellappstore, mod_mooduell {{/str}}
-            </td>
-            <td align="center">
-                <a href='https://apps.apple.com/at/app/univie-mooduell/id1496638765'><img width="150px"  alt='Download from Apple App Store' src='https://developer.apple.com/app-store/marketing/guidelines/images/badge-download-on-the-app-store.svg'/></a>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                {{#str}} univiemooduellplaystore, mod_mooduell {{/str}}
-            </td>
-            <td align="center">
-                <a href='https://play.google.com/store/apps/details?id=at.wunderbyte.univiemooduell&hl=de&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img width="170px" alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
-            </td>
-        </tr>
-    </table></div>
+<div class="container-fluid">
+    <div class="row">
+    <div class="col-sm">
+        <div class="row">
+            <div class="col-sm">{{#str}} univiemooduellappstore, mod_mooduell {{/str}}</div>
+            <div class="col-sm" style="text-align: center;"><a href='https://apps.apple.com/at/app/univie-mooduell/id1496638765'><img style="width: 140px" alt='Download from Apple App Store' src='https://developer.apple.com/app-store/marketing/guidelines/images/badge-download-on-the-app-store.svg'/></a></div>
+        </div>
+        <div class="row">
+            <div class="col-sm">{{#str}} univiemooduellplaystore, mod_mooduell {{/str}}</div>
+            <div class="col-sm" style="text-align: center;"><a href='https://play.google.com/store/apps/details?id=at.wunderbyte.univiemooduell&hl=de&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img style="width: 160px" alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a></div>
+        </div>
+    </div>
     <div class="col-sm">
         <h4>{{#str}} qrtitle, mod_mooduell {{/str}}</h4>
         <p>{{#str}} qrdesc, mod_mooduell {{/str}}</p>
     </div>
     {{#qrimage}}
-    <div class="col-sm">
+    <div class="col-sm" style="text-align: center">
         <img style="width:200px" src="{{qrimage}}"/>
     </div>
     {{/qrimage}}
-  </div>
-  </div>
+    </div>
 </div>
 {{/statistics}}
 
