--- a/templates/viewpagestudents.mustache
+++ b/templates/viewpagestudents.mustache
@@ -74,12 +74,11 @@
         <p>{{#str}} qrdesc, mod_mooduell {{/str}}</p>
     </div>
     {{#qrimage}}
-    <div class="col-sm">
+    <div class="col-sm" style="text-align: center">
         <img style="width:200px" src="{{qrimage}}"/>
     </div>
     {{/qrimage}}
-  </div>
-  </div>
+    </div>
 </div>
 {{/statistics}}
 
