--- a/templates/viewpagestudents.mustache
+++ b/templates/viewpagestudents.mustache
@@ -74,7 +74,7 @@
         <p>{{#str}} qrdesc, mod_mooduell {{/str}}</p>
     </div>
     {{#qrimage}}
-    <div class="col-sm" style="text-align: center">
+    <div class="col-md" style="text-align: center">
         <img style="width:200px" src="{{qrimage}}"/>
     </div>
     {{/qrimage}}
