--- a/templates/overview_students.mustache
+++ b/templates/overview_students.mustache
@@ -23,7 +23,7 @@
 
     Example context (json):
     {
-        "statistics": {
+       "statistics": {
           "courseid": "50",
           "number_of_opponents": "2",
           "number_of_open_games": "2",
@@ -31,63 +31,78 @@
           "number_of_games_won": 0,
           "number_of_correct_answers": 0,
           "percentage_of_correct_answers": 0
-        }
+       },
+       "opengames": [],
+       "finishedgames": [],
+       "highscores": [],
+       "quizname": "test"
     }
-}}
+
+    }}
+
+<h2>{{quizname}}</h2>
 
 {{#statistics}}
-    <!-- Card Deck -->
-    <div class="card-deck">
-        <div class="card">
-            <div class="card-body wbblue text-white">
-                <h1 class="card-title"> {{number_of_opponents}} </h1>
-                <p class="card-text subheader">{{#str}} stat_student_opponents, mod_mooduell {{/str}}</p>
-                <p class="card-text">{{#str}} stat_student_opponents_desc, mod_mooduell {{/str}}</p>
-            </div>
+{{#str}} downloaduniviemoduell, mod_mooduell {{/str}}
+    <br>
+    <br>
+<div class="container-fluid">
+    <div class="row">
+    <div class="col-md">
+        <div class="row">
+            <div class="col-sm">{{#str}} univiemooduellappstore, mod_mooduell {{/str}}</div>
+            <div class="col-sm" style="text-align: center;"><a href='https://apps.apple.com/at/app/univie-mooduell/id1496638765'><img style="width: 140px; max-width: 100%" alt='Download from Apple App Store' src='https://developer.apple.com/app-store/marketing/guidelines/images/badge-download-on-the-app-store.svg'/></a></div>
         </div>
-        <div class="card">
-            <div class="card-body wborange text-white">
-                <h1 class="card-title"> {{number_of_open_games}} </h1>
-                <p class="card-text subheader">{{#str}} stat_student_open_games, mod_mooduell {{/str}}</p>
-                <p class="card-text">{{#str}} stat_student_open_games_desc, mod_mooduell {{/str}}</p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-body bg-primary text-white">
-                <h1 class="card-title"> {{number_of_games_finished}} </h1>
-                <p class="card-text subheader">{{#str}} stat_student_finished_games, mod_mooduell {{/str}}</p>
-                <p class="card-text">{{#str}} stat_student_finished_games_desc, mod_mooduell {{/str}}</p>
-            </div>
+        <div class="row">
+            <div class="col-sm">{{#str}} univiemooduellplaystore, mod_mooduell {{/str}}</div>
+            <div class="col-sm" style="text-align: center;"><a href='https://play.google.com/store/apps/details?id=at.wunderbyte.univiemooduell&hl=de&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img style="width: 160px; max-width: 100%" alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a></div>
         </div>
     </div>
-    <div class="card-deck">
-        <div class="card">
-            <div class="card-body bg-warning text-black">
-                <h1 class="card-title"> {{number_of_games_won}} </h1>
-                <p class="card-text subheader">{{#str}} stat_student_games_won, mod_mooduell {{/str}}</p>
-                <p class="card-text">{{#str}} stat_student_games_won_desc, mod_mooduell {{/str}}</p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-body bg-info text-white">
-                <h1 class="card-title"> {{number_of_correct_answers}} </h1>
-                <p class="card-text subheader">{{#str}} stat_student_correct_answers, mod_mooduell {{/str}}</p>
-                <p class="card-text">{{#str}} stat_student_correct_answers_desc, mod_mooduell {{/str}}</p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-body bg-success text-white">
-                <h1 class="card-title">
-                    {{#percentage_of_correct_answers}}{{.}}%{{/percentage_of_correct_answers}}
-                    {{^percentage_of_correct_answers}}0%{{/percentage_of_correct_answers}}
-                </h1>
-                <p class="card-text subheader">{{#str}} stat_student_correct_percentage, mod_mooduell {{/str}}</p>
-                <p class="card-text">{{#str}} stat_student_correct_percentage_desc, mod_mooduell {{/str}}</p>
-            </div>
-        </div>
+    <div class="col-md">
+        <h4>{{#str}} qrtitle, mod_mooduell {{/str}}</h4>
+        <p>{{#str}} qrdesc, mod_mooduell {{/str}}</p>
     </div>
-    {{/statistics}}
-
-{{^statistics}}
-    {{#str}} nostatistics, mod_mooduell {{/str}}
+    {{#qrimage}}
+    <div class="col-md" style="text-align: center">
+        <img style="width:200px" src="{{qrimage}}"/>
+    </div>
+    {{/qrimage}}
+    </div>
+</div>
 {{/statistics}}
+
+<ul class="nav nav-tabs" id="mooduellTab" role="tablist">
+    <li class="nav-item">
+        <a class="nav-link active" id="statistics-tab" data-toggle="tab" href="#statistics" role="tab" aria-controls="statistics" aria-selected="true"><h4>{{#str}}
+            statistics, mod_mooduell {{/str}}</h4></a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" id="opengames-tab" data-toggle="tab" href="#opengames" role="tab" aria-controls="opengames" aria-selected="true"><h4>{{#str}} opengames, mod_mooduell {{/str}}</h4></a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" id="finishedgames-tab" data-toggle="tab" href="#finishedgames" role="tab" aria-controls="finishedgames" aria-selected="false"><h4>{{#str}} finishedgames, mod_mooduell {{/str}}</h4></a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" id="highscores-tab" data-toggle="tab" href="#highscores" role="tab" aria-controls="highscores" aria-selected="false"><h4>{{#str}} highscores, mod_mooduell {{/str}}</h4></a>
+    </li>
+</ul>
+<div class="tab-content" id="mooduellTabContent">
+    <div class="tab-pane fade show active" id="statistics" role="tabpanel" aria-labelledby="statistics-tab">
+        {{> mooduell/table_statistics_students }}
+    </div>
+    <div class="tab-pane fade" id="opengames" role="tabpanel" aria-labelledby="opengames-tab">
+        {{{opengames}}}
+    </div>
+    <div class="tab-pane fade" id="finishedgames" role="tabpanel" aria-labelledby="finishedgames-tab">
+        {{{finishedgames}}}
+    </div>
+    <div class="tab-pane fade" id="highscores" role="tabpanel" aria-labelledby="highscores-tab">
+        {{{highscores}}}
+    </div>
+</div>
+
+<div class="d-flex justify-content-center" id="spinner">
+    <div class="spinner-border hidden" role="status">
+        <span class="sr-only">Loading...</span>
+    </div>
+</div>
