--- a/templates/table_statistics_students.mustache
+++ b/templates/table_statistics_students.mustache
@@ -27,10 +27,10 @@
           "courseid": "50",
           "number_of_opponents": "2",
           "number_of_open_games": "2",
-          "number_of_games_finished": 0,
-          "number_of_games_won": 0,
-          "number_of_correct_answers": 0,
-          "percentage_of_correct_answers": 0
+          "number_of_games_finished": 1,
+          "number_of_games_won": 1,
+          "number_of_correct_answers": 3,
+          "percentage_of_correct_answers": "33"
         }
     }
 }}
