--- a/templates/table_statistics_teacher.mustache
+++ b/templates/table_statistics_teacher.mustache
@@ -29,12 +29,12 @@
                   "number_of_games_started": "2",
                   "number_of_games_finished": "0",
                   "number_of_answers": "4",
-                  "percentage_of_correct_answers": false,
-                  "eq_id": false,
-                  "eq_name": "",
+                  "percentage_of_correct_answers": "32",
+                  "eq_id": "4",
+                  "eq_name": "The easiest question",
                   "eq_correct_count": 0,
                   "hq_id": "5",
-                  "hq_name": "Wählen Sie alle FALSCHEN ANTWORTEN aus",
+                  "hq_name": "The hardest question",
                   "hq_incorrect_count": "1"
         }
     }
