Fix button font color bug in teacher statistics.

--- a/templates/table_statistics_teacher.mustache
+++ b/templates/table_statistics_teacher.mustache
@@ -92,7 +92,7 @@
                         {{#str}} stat_easiest_question_desc1, mod_mooduell {{/str}}{{eq_correct_count}}{{#str}} stat_easiest_question_desc2, mod_mooduell {{/str}}
                     </p>
                     <a href="../../question/question.php?courseid={{courseid}}&id={{eq_id}}&returnurl=/mod/mooduell/view.php?id={{cmid}}#statistics"
-                    target="_blank" class="btn btn-primary bg-light text-info" style="border-style: none;">
+                    target="_blank" class="btn bg-light text-info" style="border-style: none;">
                     {{#str}} stat_edit_question, mod_mooduell {{/str}}
                     </a>
                 {{/eq_id}}
@@ -110,7 +110,7 @@
                         {{#str}} stat_hardest_question_desc1, mod_mooduell {{/str}}{{hq_incorrect_count}}{{#str}} stat_hardest_question_desc2, mod_mooduell {{/str}}
                     </p>
                     <a href="../../question/question.php?courseid={{courseid}}&id={{hq_id}}&returnurl=/mod/mooduell/view.php?id={{cmid}}#statistics"
-                        target="_blank" class="btn btn-primary bg-light text-danger" style="border-style: none;">
+                        target="_blank" class="btn bg-light text-danger" style="border-style: none;">
                     {{#str}} stat_edit_question, mod_mooduell {{/str}}
                     </a>
                 {{/hq_id}}
