--- a/templates/table_statistics_teacher.mustache
+++ b/templates/table_statistics_teacher.mustache
@@ -72,7 +72,7 @@
             </div>
         </div>
     </div>
-    <div class="card-deck three-columns">
+    <div class="card-deck">
         <div class="card bg-success text-white">
             <div class="card-body">
                 <h1 class="card-title">
