--- a/templates/list_id.mustache
+++ b/templates/list_id.mustache
@@ -23,10 +23,9 @@
 
     Example context (json):
     {
-       'url':'https:/mymoodle/editquestion.png',
-       'id':'id'
+       "questionurl": "https://mymoodle/editquestion.png",
+       "id": "id"
     }
-
 }}
 <div>
 {{^questionurl}}
