--- a/templates/list_image.mustache
+++ b/templates/list_image.mustache
@@ -23,8 +23,8 @@
 
     Example context (json):
     {
-       'imageurl':'https:/mymoodle/image.png',
-       'imagetext':'imagetext'
+       "imageurl": "https://mymoodle/image.png",
+       "imagetext": "imagetext"
     }
 
 }}
@@ -34,6 +34,6 @@
 {{/imageurl}}
 {{#imageurl}}
     <a href="{{{imageurl}}}">
-        <img src="{{{imageurl}}}" alt="{{imagetext}}" width="100px">
+        <img src="{{{imageurl}}}" alt="{{imagetext}}" width="100">
     </a>
 {{/imageurl}}
