--- a/templates/viewpagestudents.mustache
+++ b/templates/viewpagestudents.mustache
@@ -23,6 +23,7 @@
     * opengames - array: empty array, will be filled with JS.
     * finsihedgames - array: empty array, will be filled with JS.
     * highscores - array: empty array, will be filled with JS.
+    * quizname - string: The quiz name.
 
     Example context (json):
     {
@@ -40,8 +41,7 @@
        "highscores": [],
        "quizname": "test"
     }
-
-    }}
+}}
 
 <h2>{{quizname}}</h2>
 
