--- a/templates/viewpagestudents.mustache
+++ b/templates/viewpagestudents.mustache
@@ -56,7 +56,7 @@
                 {{#str}} univiemooduellappstore, mod_mooduell {{/str}}
             </td>
             <td align="center">
-                <a href='https://apps.apple.com/at/app/univie-mooduell/id1496638765'><img width="150px"  alt='Download from Apple App Store' src='https://developer.apple.com/app-store/marketing/guidelines/images/badge-download-on-the-app-store.svg'/></a>
+                <a href='https://apps.apple.com/us/app/uw-mooduell/id1596475094'><img width="150px"  alt='Download from Apple App Store' src='https://developer.apple.com/app-store/marketing/guidelines/images/badge-download-on-the-app-store.svg'/></a>
             </td>
         </tr>
         <tr>
@@ -64,7 +64,7 @@
                 {{#str}} univiemooduellplaystore, mod_mooduell {{/str}}
             </td>
             <td align="center">
-                <a href='https://play.google.com/store/apps/details?id=at.wunderbyte.univiemooduell&hl=de&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img width="170px" alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
+                <a href='https://play.google.com/store/apps/details?id=at.ac.univie.uwmooduell'><img width="170px" alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
             </td>
         </tr>
     </table>
