--- a/templates/table_questions_teacher.mustache
+++ b/templates/table_questions_teacher.mustache
@@ -12,7 +12,7 @@
     along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 }}
 {{!
-    @template mod_mooduell/viewpage
+    @template mod_mooduell/table_questions_teacher
     Template which defines a mooduell view page.
     Classes required for JS:
     * none
@@ -30,6 +30,23 @@
                   "courseid":"50"
                }
             ]
+        ],
+        "questions" : [
+            "questionid" : 2,
+            "imageurl" : "https://image.png",
+            "imagetext" : "my text",
+            "questiontext" : "my question",
+            "answers" : [
+                "answertext" : "this is the answer",
+                "correct" : "true"
+            ],
+            "questiontype" : "multichoice",
+            "length" : "77"
+            "categoryname" : "7",
+            "warnings" : [
+                "warningstet" : "this is a warning"
+            ],
+            "status" : "OK"
         ]
     }
 }}
@@ -57,5 +74,49 @@
     </tr>
     </thead>
     <tbody>
+    {{#questions}}
+        <tr class="field">
+            <td>
+                <a href="../../question/question.php?returnurl=/question/edit.php?courseid={{courseid}}&courseid={{courseid}}&id={{questionid}}">
+                {{questionid}}
+                </a>
+            </td>
+            <td>
+            {{#imageurl}}
+                <a href="{{imageurl}}"><img src="{{imageurl}}" width="100px"></a>
+                <p>{{imagetext}}</p>
+            {{/imageurl}}
+            </td>
+            <td>
+               <div class='questiontext'>
+                    {{{questiontext}}}
+                </div>
+                <div class='answers'>
+                    <ul>
+                        {{#answers}}
+                            <li>
+                                {{#correct}}<span class="correct">{{/correct}}
+                                    {{{answertext}}}
+                                {{#correct}}</span>{{/correct}}
+                            </li>
+                        {{/answers}}
+                    </ul>
+                </div>
+            </td>
+            <td>{{questiontype}}</td>
+            <td>{{length}}</td>
+            <td>{{categoryname}}</td>
+            <td>
+                <ul>
+                    {{#warnings}}
+                    <li>
+                        <span style="color: red">{{message}}</span>
+                    </li>
+                    {{/warnings}}
+                </ul>
+            </td>
+            <td>{{status}}</td>
+        </tr>
+    {{/questions}}
     </tbody>
 </table>
