set questions modal to large

--- a/templates/list_action.mustache
+++ b/templates/list_action.mustache
@@ -41,7 +41,7 @@
 
 <div id="mooduell-modal{{counter}}" class="modal in" tabindex="-1" role="dialog"
      aria-labelledby="mooduellModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header bg-primary">
                 <h5 class="modal-title" id="mooduellModalLabel">{{counter}}</h5>
