--- a/templates/table_questions_teacher.mustache
+++ b/templates/table_questions_teacher.mustache
@@ -19,34 +19,39 @@
     Data attributes required for JS:
     * none
     Context variables required for this template:
+
     Example context (json):
     {
         "categories" : [
-            [
                {
                   "catid":"7",
                   "contextid":"1",
                   "catname":"MooDuell Pr\u00e4sentation",
                   "courseid":"50"
                }
-            ]
         ],
         "questions" : [
-            "questionid" : 2,
-            "imageurl" : "https://image.png",
-            "imagetext" : "my text",
-            "questiontext" : "my question",
-            "answers" : [
-                "answertext" : "this is the answer",
-                "correct" : "true"
-            ],
-            "questiontype" : "multichoice",
-            "length" : "77"
-            "categoryname" : "7",
-            "warnings" : [
-                "warningstet" : "this is a warning"
-            ],
-            "status" : "OK"
+            {
+                "questionid" : 2,
+                "imageurl" : "https://image.png",
+                "imagetext" : "my text",
+                "questiontext" : "my question",
+                "answers" : [
+                    {
+                        "answertext" : "this is the answer",
+                        "correct" : "true"
+                    }
+                ],
+                "questiontype" : "multichoice",
+                "length" : "77",
+                "categoryname" : "7",
+                "warnings" : [
+                    {
+                        "warningstet" : "this is a warning"
+                    }
+                ],
+                "status" : "OK"
+            }
         ]
     }
 }}
