--- a/templates/table_questions_teacher.mustache
+++ b/templates/table_questions_teacher.mustache
@@ -88,7 +88,7 @@
             </td>
             <td>
             {{#imageurl}}
-                <a href="{{imageurl}}"><img src="{{imageurl}}" width="100px"></a>
+                <a href="{{imageurl}}"><img src="{{imageurl}}" width="100" alt="{{imagetext}}"></a>
                 <p>{{imagetext}}</p>
             {{/imageurl}}
             </td>
