Added Settings for StoreURI's

--- a/templates/viewpagestudents.mustache
+++ b/templates/viewpagestudents.mustache
@@ -51,22 +51,26 @@
     <br>
     <br>
     <table class="fullwidth">
+    {{#urlios}}
         <tr>
             <td>
                 {{#str}} univiemooduellappstore, mod_mooduell {{/str}}
             </td>
             <td align="center">
-                <a href='https://apps.apple.com/at/app/u-mooduell/id1596475094'><img width="150px"  alt='Download from Apple App Store' src='https://developer.apple.com/app-store/marketing/guidelines/images/badge-download-on-the-app-store.svg'/></a>
+                <a href='{{urlios}}'><img width="150px"  alt='Download from Apple App Store' src='https://developer.apple.com/app-store/marketing/guidelines/images/badge-download-on-the-app-store.svg'/></a>
             </td>
         </tr>
+    {{/urlios}}
+    {{#urlandroid}}
         <tr>
             <td>
                 {{#str}} univiemooduellplaystore, mod_mooduell {{/str}}
             </td>
             <td align="center">
-                <a href='https://play.google.com/store/apps/details?id=at.ac.univie.uwmooduell'><img width="170px" alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
+                <a href='{{urlandroid}}'><img width="170px" alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
             </td>
         </tr>
+    {{/urlandroid}}
     </table>
 {{/nogames}}
 {{/statistics}}
